responsive-layout issues solved

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -41,8 +41,8 @@ ul {
 }
 
 .anim-typewriter {
-	animation: typewriter 4s steps(40) 1s 1 normal both,
-		writeCursor 500ms steps(40) infinite normal;
+	animation: typewriter 2s steps(40) 1s 1 normal both,
+		writeCursor 400ms steps(40) infinite normal;
 
 	@keyframes typewriter {
 		from {
@@ -311,6 +311,7 @@ h6 {
 
 .projects {
 	height: 500px;
+	cursor: pointer;
 }
 
 .project1 {
@@ -380,7 +381,7 @@ h6 {
 	}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 990px) {
 	.projects {
 		width: 90%;
 		margin: 1rem auto;
